force-app/main/default/objects/UniTag__Tagging__c/fields/UniTag__Account__c.field-meta.xml
<CustomField>
    <fullName>UniTag__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Taggings</relationshipLabel>
    <relationshipName>Taggings</relationshipName>
    <type>Lookup</type>
</CustomField>