force-app/main/default/objects/UniTag__Tagging__c/fields/UniTag__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>UniTag__Record_Id__c</fullName>
    <label>Tagged Record Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>