force-app/main/default/objects/UniTag__Tagging__c/fields/UniTag__Record_Name__c.field-meta.xml
<CustomField>
    <fullName>UniTag__Record_Name__c</fullName>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>