force-app/main/default/objects/UniTag__Tagging__c/fields/UniTag__sObject_Type__c.field-meta.xml
<CustomField>
    <fullName>UniTag__sObject_Type__c</fullName>
    <label>sObject Type</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>