force-app/main/default/objects/UniTag__Tagging__c/fields/UniTag__Tag__c.field-meta.xml
<CustomField>
    <fullName>UniTag__Tag__c</fullName>
    <label>Tag</label>
    <referenceTo>UniTag__Tag__c</referenceTo>
    <relationshipLabel>Taggings</relationshipLabel>
    <relationshipName>Taggings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>