force-app/main/default/objects/UniTag__Tagging__c/listViews/UniTag__All.listView-meta.xml
<ListView>
    <fullName>UniTag__All</fullName>
    <columns>NAME</columns>
    <columns>UniTag__sObject_Type__c</columns>
    <columns>UniTag__Tag__c</columns>
    <columns>UniTag__Record_Id__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>